--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,11 @@
 /__pycache__
 /data
 
+data/*
+artifacts/*
+fastf1_cache/
+__pycache__/
+*.pyc
+**/.ipynb_checkpoints
+!data/.gitkeep
+!artifacts/.gitkeep
